# ttgamma_lwtnn_injection

./: CMakeLists.txt  README.md  setup.sh
Root/: nnInjector.cxx
egammaSF/: EFakeSFs_Final.root
hfakeSF/: hfake_SF_final_3D.root
include/: nnInjector.h
json/: lwtnn_EventLevel.json  lwtnn_EventLevel_BN_D_DR_BN_D_DR_D_D.json  lwtnn_EventLevel_withQCD.json  model13b_600_singlelepton_ELD.json  model1_300_dilepton_ELD.json  model2_400_dilepton_ELD.json  model3_300_singlelepton_ELD.json  model4_100_singlelepton_ELD.json  model4_150_singlelepton_ELD.json  model4_300_dilepton_ELD.json  model4_300_singlelepton_ELD.json  model4_600_dilepton_ELD.json
kfactor/: kfactor_dilepton_theory_fineBin.root  kfactor_sinlepton_theory_fineBin.root
samples/: all.sh  data.sh  other.sh  qcd.sh  w.sh  z.sh
scripts/: all.sh  batchSubmit_allCR.sh  batchSubmit_allCRS.sh  batch_creator.py  batch_creator_dag.py  data.sh  ttgamma_systs.sh
systematics/: weights_PPT-2017-08-22-1.root  weights_PPT-2018-02-08-1.root  weights_PPT-2018-03-27-1.root  weights_PPT_2018-03-19-1.root
